@@ -12,6 +12,9 @@ New features:
 
 Bug fixes/enhancements:
 
+- GLRenderer: OpenGL errors could leak through into Python and produce exceptions
+  on unrelated PyOpenGL calls. The error flag is now cleared at the end of
+  the C++ rendering code (bug #2974422).
 - sequence: buildSequences() didn't work properly when assumeFiles was set to
   True and there was more than one number inside the path. Thanks to Scott Ballard.
 - viewer: Joystick support was partially broken (copy&paste error). Thanks
